# shannot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LLM.md  MCP.md  MCP_DEPENDENCY_ANALYSIS.md  MINIMAL_MCP_ANALYSIS.md  Makefile  NIM_PORT_PLAN.md  README.md  REMOTE.md  SECURITY.md  SKILL.md  TEST_SUMMARY.md  build_binary.py  cliff.toml  install.sh  interact.py  mkdocs.yml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: README.md  api.md  configuration.md  deployment.md  index.md  installation.md  mcp-testing.md  mcp.md  migrating-from-v3.md  profiles.md  seccomp.md  testing.md  troubleshooting.md  usage.md
lima/: fedora.yaml
plans/: LLM.md  MCP.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  REMOTE.md  ROADMAP.md  TODO.md
profiles/: systemd.json
prototypes/: README.md  minimal_mcp.py
sandboxlib/: _commonstruct_build.py  approve.py  cli.py  config.py  deploy.py  interact.py  mix_accept_input.py  mix_remote.py  mix_subprocess.py  mix_vfs.py  pending_write.py  queue.py  remote.py  run_session.py  runtime.py  sandboxio.py  session.py  ssh.py  structs.py  vfs_procfs.py  virtualizedproc.py
scripts/: test_mcp_server.py
shannot/: __init__.py  _protocols.py  approve.py  audit.py  checkpoint.py  cli.py  config.py  deploy.py  execute.py  execution.py  interact.py  mcp_main.py  mcp_server.py  minimal_mcp.py  mix_accept_input.py  mix_dump_output.py  mix_grab_output.py  mix_pypy.py  mix_remote.py  (+17 more)
(+66 files in other folders)
